fix: fixed overflow bug

--- a/app/pages/reset.sass
+++ b/app/pages/reset.sass
@@ -1,5 +1,3 @@
-@import ../src/styles/_mixins
-
 *
   margin: 0
   padding: 0
@@ -46,9 +44,3 @@ table
 img
   display: block
   width: 100%
-
-@include mobile()
-  #__next
-    height: 100vh
-    &.show_sidebar
-      overflow: hidden
