--- a/app/src/components/sidebar/sidebar.module.sass
+++ b/app/src/components/sidebar/sidebar.module.sass
@@ -33,7 +33,6 @@
 @include mobile()
   .root
     width: 100%
-    position: fixed
     left: 0
     top: 60px
     max-height: calc(100% - 60px)
