--- a/app/src/components/sidebar/sidebar_group.module.sass
+++ b/app/src/components/sidebar/sidebar_group.module.sass
@@ -23,6 +23,10 @@
     opacity: .6
 
 @include mobile()
+  .root
+    &:last-child
+      -webkit-padding-end: 58px
+
   .list
     margin-top: 4px
 
