--- a/app/src/pages/example/index.module.sass
+++ b/app/src/pages/example/index.module.sass
@@ -135,7 +135,7 @@
   .root_example
     padding: 60px 0 0
     position: relative
-    height: 100%
+    height: 100vh
 
   .canvas_wrapper
     max-width: none
