--- a/app/src/pages/example/params.module.sass
+++ b/app/src/pages/example/params.module.sass
@@ -75,5 +75,10 @@
     padding: 30px
 
   .reset
+    border-style: none
+    padding-top: 1px
     &_icon
-      width: 15px
+      margin-right: 4px
+      width: 16px
+    &_text
+      padding-top: 1px
